# code-review-ai

./: .env.example  .gitignore  README.md  pubspec.yaml  pyproject.toml
backend/: main.py
backend/api/: routes.py
backend/config/: settings.py
backend/core/: helpers.py  settings.py
backend/core/config/: config.py
backend/core/llm/: base.py  ollama.py  openai_compat.py  provider.py
backend/core/parsing/: validate_repair.py
backend/core/prompts/: registry.py
backend/domain/prompts/: registry.py
backend/domain/schemas/: diff.py  review.py
backend/domain/services/: review_service.py
backend/domain/tools/: get_symbols.py  ripgrep_refs.py  similar_code.py  symbol_definition.py
backend/evaluation/: __init__.py  cli.py  compare_runs.py  evaluator.py  langsmith_integration.py  loader.py  schemas.py  scorer.py  semantic_matcher.py
backend/evaluation/datasets/: humanevalfix_python.yaml  v1_expanded.yaml  v1_initial.yaml
backend/evaluation/webapp/: __init__.py  app.py  utils.py
backend/exceptions/: handlers.py
backend/llm/: base.py  invoke.py  ollama.py  openai_compat.py  openai_native.py  provider.py
backend/middleware/: request_context.py
backend/pipelines/: base.py  registry.py
backend/pipelines/codes/: g0_baseline.py
backend/schemas/: review.py
backend/services/: review_service.py
backend/shared/: context.py  logging.py  parser.py
backend/tools/: git_diff.py
dart/lib/: git.dart  reviewer.dart  summary.md
frontend/: package.json
frontend/src/: extension.ts
lib/: constants.dart  ollama_client.dart  reviewer.dart
(+63 files in other folders)
