[project]
name = "code-review-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.125.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.2",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.5",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
]
