[project]
name = "code-review-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.2",
    "fastapi>=0.125.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.2",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.5",
    "langsmith>=0.5.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.38.0",
]
